@@ -882,6 +882,10 @@
               "name": "Content-Encoding",
               "value": "gzip"
             },
+			{
+              "name": "ETag",
+              "value": "eiwqptzquilwehqfiqpfeq444"
+            },
             {
               "name": "Last-Modified",
               "value": "Tue, 31 May 2016 05:14:59 GMT"
@@ -1012,6 +1016,10 @@
               "name": "Content-Encoding",
               "value": "gzip"
             },
+			{
+              "name": "ETag",
+              "value": "432412-65347-54325432-6543"
+            },
             {
               "name": "Vary",
               "value": "Accept-Encoding, User-Agent"
@@ -1141,6 +1149,10 @@
             {
               "name": "Content-Encoding",
               "value": "gzip"
+            },
+			{
+              "name": "ETag",
+              "value": "hjkftu7ukvgiftzi"
             },
             {
               "name": "Vary",
@@ -1272,6 +1284,10 @@
               "name": "Content-Encoding",
               "value": "gzip"
             },
+			{
+              "name": "ETag",
+              "value": "7806789ghjfghj"
+            },
             {
               "name": "Last-Modified",
               "value": "Wed, 28 Mar 2018 05:31:18 GMT"
@@ -1402,6 +1418,10 @@
               "name": "Content-Encoding",
               "value": "gzip"
             },
+			{
+              "name": "ETag",
+              "value": "7896789sdgsdfg567dfg"
+            },
             {
               "name": "Vary",
               "value": "Accept-Encoding, User-Agent"
@@ -1531,6 +1551,10 @@
             {
               "name": "Content-Encoding",
               "value": "gzip"
+            },
+			{
+              "name": "ETag",
+              "value": "sdfgsdfgsdfsdfg"
             },
             {
               "name": "Last-Modified",
